# pointcloud_densification

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/lidar_centerpoint/: node.hpp
launch/: densifier.launch
lib/include/: pointcloud_densification.hpp  voxel_generator.hpp
lib/src/: kernels.cu  pointcloud_densification.cpp  voxel_generator.cpp
src/: main.cpp  node.cpp
