<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_densification</name>
  <version>1.0.0</version>
  <description>The lidar_centerpoint package</description>

  <maintainer email="yusuke.muramatsu@tier4.jp">Yusuke Muramatsu</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>autoware_perception_msgs</build_depend>
  <build_depend>autoware_utils</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>autoware_utils</exec_depend>
  <exec_depend>autoware_perception_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>


  <export>  </export>
</package>
